# identity/main.go
@@ -6,6 +6,8 @@ import (
 
 	"github.com/gin-gonic/gin"
 
+	utils "surge/identity/m/utils"
+
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 
@@ -18,14 +20,18 @@ import (
 // @in header
 // @name Authorization
 func main() {
+	port := utils.GetEnv("PORT")
+	host := utils.GetEnv("HOST")
+
 	r := gin.Default()
 
 	models.ConnectDatabase()
 
 	r.POST("api/users/signup", controllers.SignupUser)
 	r.POST("api/users/login", controllers.ObtainJWT)
+	r.GET("api/users/profile", controllers.GetProfile)
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
-	r.Run()
+	r.Run(host + ":" + port)
 }
