# identity/models/user.go
@@ -1,7 +1,24 @@
 package models
 
+import (
+	"golang.org/x/crypto/bcrypt"
+)
+
 type User struct {
 	ID       uint   `json:"id" gorm:"primary_key"`
-	Email    string `json:"email" gorm:"uniqueIndex"`
+	Username string `json:"username" gorm:"unique"`
 	Password string `json:"password"`
+}
+
+func HashPassword(password string) string {
+	bytes, err := bcrypt.GenerateFromPassword([]byte(password), bcrypt.DefaultCost)
+	if err != nil {
+		panic(err)
+	}
+	return string(bytes)
+}
+
+func VerifyPassword(hashedPassword, password string) bool {
+	err := bcrypt.CompareHashAndPassword([]byte(hashedPassword), []byte(password))
+	return err == nil
 }
